# hyper2ch

./: .env.sample  .gitignore  Caddyfile  Cargo.toml  README.md  config.json  docker-compose.yml  openapi.yml
migrations/2020-11-02-150229_create_bbs/: down.sql  up.sql
migrations/2020-11-02-150229_create_bbses/: down.sql
src/: cli.rs  config.rs  lib.rs  main.rs  models_diesel.rs  schema.rs
src/bbs/: home.rs  mod.rs
src/database/: client.rs  mod.rs
src/db/: client.rs  controller.rs  mock.rs  mod.rs
src/encoding/: mod.rs
src/models/: README.md  bbs.rs  message.rs  mod.rs  thread.rs
src/services/: bbs.rs  message.rs  mod.rs  serve.rs  thread.rs
src/services/legacy/: bbs.rs  mod.rs  thread.rs
src/thread/: list.rs  mod.rs  model.rs
src/thread/message/: get.rs  mod.rs  post.rs
src/util/: datetime_format.rs  env.rs  formdata.rs  mod.rs  shift_jis.rs
templates/: bbs.html
